--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,7 @@
 {% block content %}
 
 <heading>
-    <!-- Title -->
-    <div class="container-fluid">
-        <img src="https://res.cloudinary.com/sjb21/image/upload/v1642002252/static/landing-image_abvoyn.jpg"
-            alt="spices" class="home-img">
+    <div class="container-fluid home-img">
         <div class="row">
             <div class="col title">
                 <h1>Welcome to the Foody Family</h1>
@@ -17,30 +14,34 @@
     </div>
 
     <!-- Recipe card -->
-    <div class="col-12 mt-3 left">
+    <div class="col-12 mt-4 left">
         <div class="row">
             {% for recipes in recipe_list %}
             <div col-md-3>
                 <div class="card" style="width: 18rem;">
-                    {% if "placeholder" in post.featured_image.url %}
+                    {% if "placeholder" in recipes.featured_image.url %}
                     <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
                         class="card-img-top" alt="placeholder image">
                     {% else %}
-                    <img src="{{ recipe.featured_image.url }}" alt="recipe image">
+                    <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                     {% endif %}
                     <div class="card-body">
                         <a href="#">
-                            <h5 class="card-title">{{ recipe.title }}</h5>
+                            <h5 class="card-title">{{ recipes.title }}</h5>
                         </a>
-                        <p class="card-text">{{ recipe.author }}</p>
-                        <p class="card-text">{{ recipe.preparation_length }}</p>
-                        <p class="card-text">{{ recipe.cooking_length }}</p>
-                        <p><i class="fas fa-heart"></i>{{ recipe.number_of_likes }}</p>
-                        <!-- <a href="#" class="btn btn-primary">View Recipe</a> -->
+                        <p class="card-text">By {{ recipes.author }}</p>
+                        <div class="card-text">
+                            <span>
+                                <i class="far fa-clock card-icons"></i>{{ recipes.total_length }}
+                            </span>
+                            <span>
+                                <i class="fas fa-heart card-icons"></i>{{ recipes.number_of_likes }}
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
-            {% if forloop.counter|divisibleby:4 %}
+            {% if forloop.counter|divisibleby:3 %}
         </div>
         <div class="row">
             {% endif %}
@@ -48,6 +49,7 @@
         </div>
     </div>
 
+    <hr> 
 
     <div>
         {% if is_paginated %}
