--- a/templates/index.html
+++ b/templates/index.html
@@ -14,57 +14,60 @@
     </div>
 
     <!-- Recipe card -->
-    <div class="col-12 mt-4 left">
+    <div class="container-fluid">
         <div class="row">
-            {% for recipes in recipe_list %}
-            <div col-md-3>
-                <div class="card" style="width: 18rem;">
-                    {% if "placeholder" in recipes.featured_image.url %}
-                    <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
-                        class="card-img-top" alt="placeholder image">
-                    {% else %}
-                    <img src="{{ recipes.featured_image.url }}" alt="recipe image">
-                    {% endif %}
-                    <div class="card-body">
-                        <a href="#">
-                            <h5 class="card-title">{{ recipes.title }}</h5>
-                        </a>
-                        <p class="card-text">By {{ recipes.author }}</p>
-                        <div class="card-text">
-                            <span>
-                                <i class="far fa-clock card-icons"></i>{{ recipes.total_length }}
-                            </span>
-                            <span>
-                                <i class="fas fa-heart card-icons"></i>{{ recipes.number_of_likes }}
-                            </span>
+            <div class="col-12 mt-4 left">
+                <div class="row">
+                    {% for recipes in recipe_list %}
+                    <div col-md-3>
+                        <div class="card" style="width: 18rem;">
+                            {% if "placeholder" in recipes.featured_image.url %}
+                            <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
+                                class="card-img-top" alt="placeholder image">
+                            {% else %}
+                            <img src="{{ recipes.featured_image.url }}" alt="recipe image">
+                            {% endif %}
+                            <div class="card-body">
+                                <a href="#">
+                                    <h5 class="card-title">{{ recipes.title }}</h5>
+                                </a>
+                                <p class="card-text">By {{ recipes.author }}</p>
+                                <div class="card-text">
+                                    <span>
+                                        <i class="far fa-clock card-icons"></i>{{ recipes.total_length }}
+                                    </span>
+                                    <span>
+                                        <i class="fas fa-heart card-icons"></i>{{ recipes.number_of_likes }}
+                                    </span>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    {% if forloop.counter|divisibleby:3 %}
+                </div>
+                <div class="row">
+                    {% endif %}
+                    {% endfor %}
                 </div>
             </div>
-            {% if forloop.counter|divisibleby:3 %}
         </div>
-        <div class="row">
+
+        <div>
+            {% if is_paginated %}
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    {% if page_obj.has_previous %}
+                    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+                    {% endif %}
+                    {% if page_obj.has_next %}
+                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+                    {% endif %}
+                </ul>
+            </nav>
             {% endif %}
-            {% endfor %}
         </div>
     </div>
-
-    <hr> 
-
-    <div>
-        {% if is_paginated %}
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-                {% endif %}
-                {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
-                {% endif %}
-            </ul>
-        </nav>
-        {% endif %}
-    </div>
+    <hr>
 </heading>
 {%endblock%}
