--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
             <div class="col-12 mt-4 left">
                 <div class="row">
                     {% for recipes in recipe_list %}
-                    <div col-md-3>
+                    <div class="col-md-3">
                         <div class="card" style="width: 18rem;">
                             {% if "placeholder" in recipes.featured_image.url %}
                             <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
-                                class="card-img-top" alt="placeholder image">
+                                class="card-img-top recipe-card-img" alt="placeholder image">
                             {% else %}
                             <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                             {% endif %}
