--- a/templates/base.html
+++ b/templates/base.html
@@ -58,9 +58,9 @@
     </main>
 
     <!-- Footer with Social Accounts -->
-    <footer>
+    <footer class="footer">
         <p>Join us on Social Media!</p>
-        <div class="container-fluid">
+        <div class="container-fluid social-links">
             <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
