--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -3,20 +3,23 @@
 {% block content %}
 
 <div>
-    {% if "placeholder" in recipes.featured_image.url %}
-    <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
-        alt="placeholder image">
-    {% else %}
-    <img src="{{ recipes.featured_image.url }}" alt="recipe image">
-    {% endif %}
+    <div class="recipe-img">
+        {% if "placeholder" in recipes.featured_image.url %}
+        <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
+            alt="placeholder image">
+        {% else %}
+        <img src="{{ recipes.featured_image.url }}" alt="recipe image">
+        {% endif %}
+    </div>
+
     <div>
         <h1>{{ recipes.title }}</h1>
         <p class="card-text">By {{ recipes.author }}</p>
         <div>
             <span>
                 <i class="far fa-clock card-icons">Prep Time: {{ recipes.preparation_length }}
-                <i class="far fa-clock card-icons"></i>Cook Time: {{ recipes.cooking_length }}
-                <i class="far fa-clock card-icons"></i>Total: {{ recipes.total_length }}
+                    <i class="far fa-clock card-icons"></i>Cook Time: {{ recipes.cooking_length }}
+                    <i class="far fa-clock card-icons"></i>Total: {{ recipes.total_length }}
             </span>
             <span>
                 <i class="fas fa-heart card-icons"></i>{{ recipes.number_of_likes }}
@@ -24,6 +27,15 @@
         </div>
     </div>
 </div>
+
+<!-- <div class="card mb-3">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div> -->
 
 <div>
     <h2>Ingredients</h2>
