--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -2,46 +2,35 @@
 
 {% block content %}
 
-<div>
-    <div class="recipe-img">
-        {% if "placeholder" in recipes.featured_image.url %}
-        <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
-            alt="placeholder image">
-        {% else %}
-        <img src="{{ recipes.featured_image.url }}" alt="recipe image">
-        {% endif %}
-    </div>
-
-    <div>
-        <h1>{{ recipes.title }}</h1>
-        <p class="card-text">By {{ recipes.author }}</p>
-        <div>
-            <span>
-                <i class="far fa-clock card-icons">Prep Time: {{ recipes.preparation_length }}
-                    <i class="far fa-clock card-icons"></i>Cook Time: {{ recipes.cooking_length }}
-                    <i class="far fa-clock card-icons"></i>Total: {{ recipes.total_length }}
-            </span>
-            <span>
-                <i class="fas fa-heart card-icons"></i>{{ recipes.number_of_likes }}
-            </span>
-        </div>
+<div class="card mb-3">
+    {% if "placeholder" in recipes.featured_image.url %}
+    <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
+        alt="placeholder image" class="card-img-top">
+    {% else %}
+    <img src="{{ recipe.featured_image.url }}" alt="recipe image" class="card-img-top">
+    {% endif %}
+    <div class="card-body">
+        <h5 class="card-title">{{ recipe.title }}</h5>
+        <p class="card-text">{{ recipe.author }}</p>
+        <span lass="card-text"><small>
+                <i class="far fa-clock"></i>Prep Time: {{ recipe.preparation_length }}
+                <i class="far fa-clock"></i>Cook Time: {{ recipe.cooking_length }}
+                <i class="far fa-clock"></i>Total: {{ recipe.total_length }}
+            </small>
+        </span>
     </div>
 </div>
 
-<!-- <div class="card mb-3">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div> -->
-
 <div>
-    <h2>Ingredients</h2>
-    <span>{{ recipes.ingredients }}</span>
-    <h2>Method</h2>
-    <span>{{ recipes.instructions }}</span>
+    <div>
+        <h2>Ingredients</h2>
+        <span>{{ recipe.ingredients }}</span>
+    </div>
+    <hr>
+    <div>
+        <h2>Method</h2>
+        <span>{{ recipe.instructions }}</span>
+    </div>
 </div>
 
 {%endblock%}
