--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>Foody Family | {{ recipe.title }}</title>
+    <title>Foody Family {{ recipe.title }}</title>
 </head>
 
 <body>
