add |striptags to remove the elements showing from summernote text editor

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,7 @@
 
 /* recipe detail stylling */
 
-.recipe-img {
-    max-height: 100px;
+.details-img {
+    max-height: 300px;
+    object-fit: cover;
 }
