--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<!--form template copied from Bootstrap forms with a couple of amendments-->
 <form>
     <div class="row mb-3">
         <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
@@ -24,6 +25,9 @@
     <div>
         <button type="submit" class="btn btn-primary">Sign in</button>
     </div>
+    <p>Need an account?
+        Register <a href="#">here</a>!
+    </p>
 </form>
 
 {%endblock%}
