--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Foody Family</a>
+            <a class="navbar-brand" href="/">Foody Family</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,21 +32,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Recipes</a>
-                    </li> -->
+                    {% if user.is_authenticated %}
+                    <li>
+                        <span>Hi {{ user.username }}!</span>
+                    </li>
+                    {% else %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-expanded="false">
-                            Login/Register
-                        </a>
+                        <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button" aria-expanded="false">Login</a>
                     </li>
+                    {% endif %}
                 </ul>
-                <!-- <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
             </div>
         </div>
     </nav>
