--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,13 +3,14 @@
 {% block content %}
 
 <!--form template copied from Bootstrap forms with a couple of amendments-->
-<form>
-    <div class="row mb-3">
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3">
-        </div>
-    </div>
+<header>
+    <h1>Login</h1>
+</header>
+<form method="post">
+    <!-- csrf_token is used to prevent hackers calling my webpage 
+        from another site. How to create login page taken from Hacker
+    Shack YouTube Channel. Link in README. -->
+    {% csrf_token %} 
     <div class="row mb-3">
         <label for="inputUsername3" class="col-sm-2 col-form-label">Username</label>
         <div class="col-sm-10">
@@ -30,4 +31,4 @@
     </p>
 </form>
 
-{%endblock%}
+{% endblock %}
