--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,7 +6,7 @@
 <header>
     <h1>Login</h1>
 </header>
-<form method="post">
+<form method="POST">
     <!-- csrf_token is used to prevent hackers calling my webpage 
         from another site. How to create login page taken from Hacker
     Shack YouTube Channel. Link in README. -->
@@ -14,13 +14,13 @@
     <div class="row mb-3">
         <label for="inputUsername3" class="col-sm-2 col-form-label">Username</label>
         <div class="col-sm-10">
-            <input type="username" class="form-control" id="inputUsername3">
+            <input type="username" name="username" class="form-control" id="inputUsername3">
         </div>
     </div>
     <div class="row mb-3">
         <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3">
+            <input type="password" name ="password" class="form-control" id="inputPassword3">
         </div>
     </div>
     <div>
