amend login form

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,8 @@
                     </li>
                     {% else %}
                     <li class="nav-item dropdown">
-                        <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button" aria-expanded="false">Login</a>
+                        <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button"
+                            aria-expanded="false" name="login ">Login</a>
                     </li>
                     {% endif %}
                 </ul>
