--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -6,29 +6,27 @@
 <header>
     <h1>Login</h1>
 </header>
-<form method="POST">
-    <!-- csrf_token is used to prevent hackers calling my webpage 
+
+<form  method="POST" action="" class="form"> 
+
+    <!--csrf_token is used to prevent hackers calling my webpage 
         from another site. How to create login page taken from Hacker
-    Shack YouTube Channel. Link in README. -->
+        Shack YouTube Channel. Link in README. -->
+
     {% csrf_token %} 
-    <div class="row mb-3">
-        <label for="inputUsername3" class="col-sm-2 col-form-label">Username</label>
-        <div class="col-sm-10">
-            <input type="username" name="username" class="form-control" id="inputUsername3">
-        </div>
-    </div>
-    <div class="row mb-3">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-            <input type="password" name ="password" class="form-control" id="inputPassword3">
-        </div>
-    </div>
-    <div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
-    </div>
+        
+    <input id="username" name="username" type="username" Placeholder="Username" class="form-input form-control" id="inputUsername3">
+    
+    <input id="password" name="password" type="password" placeholder="Password" class="form-input form-control" id="inputPassword3">
+    
+    <button type="submit" class="btn btn-primary">Sign in</button>
+
+    {{ form.errors }}
+    
     <p>Need an account?
         Register <a href="#">here</a>!
     </p>
+    
 </form>
-
+   
 {% endblock %}
