Add stylling to login navbar welcome

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,13 @@
     border-radius: 10px;
 }
 
+.welcome {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #A7490D;
+    text-decoration: none;
+}
+
 /* Recipe Card Stylling */
 .card-position {
     margin-bottom: 10px;
