--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                     <li class="nav-item">
                         <a href="{% url 'logout' %}" class="nav-link active">Logout</a>
                     </li>
-                    <li class="nav-item"><span>Hi {{ user.username }}!</span></li>
+                    <li class="nav-item welcome"><span>Hi {{ user.username }}!</span></li>
                     {% else %}
                     <li class="nav-item dropdown">
                         <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button"
