add template and start view for user registration page

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                     {% else %}
                     <li class="nav-item dropdown">
                         <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button"
-                            aria-expanded="false" name="login ">Login</a>
+                            aria-expanded="false" name="login ">Login/Register</a>
                     </li>
                     {% endif %}
                 </ul>
