Star on registration functionality

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -26,7 +26,7 @@
     {{ form.errors }}
 
     <p>Need an account?
-        Register <a href="#">here</a>!
+        Register <a href="register.html">here</a>!
     </p>
 
 </form>
