--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -8,6 +8,8 @@
 <form method="POST" action="login.html" class="form">
     {% csrf_token %}
 
+    <!--  {{ form.as_p }} -->
+
     <input type="email" name="email" placeholder="Email">
     <input type="username" name="username" placeholder="Username">
     <input type="password1" name="password1" placeholder="Password">
