fix redirect by making the registration form action an empty string

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -5,10 +5,8 @@
     <h1>Register</h1>
 </header>
 
-<form method="POST" action="login.html" class="form">
+<form method="POST" action="" class="form">
     {% csrf_token %}
-
-    <!--  {{ form.as_p }} -->
 
     <input type="email" name="email" placeholder="Email">
     <input type="username" name="username" placeholder="Username">
