amended code to hide password input

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -10,8 +10,8 @@
 
     <input type="email" name="email" placeholder="Email">
     <input type="username" name="username" placeholder="Username">
-    <input type="password1" name="password1" placeholder="Password">
-    <input type="password2" name="password2" placeholder="Repeat Password">
+    <input type="password" name="password1" placeholder="Password">
+    <input type="password" name="password2" placeholder="Repeat Password">
 
     <button type="submit" class="btn btn-primary">Register</button>
     
