--- a/templates/base.html
+++ b/templates/base.html
@@ -35,10 +35,14 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     {% if user.is_authenticated %}
+                    <li class="nav-item welcome"><span>Hi {{ user.username }}!</span></li>
+                    <li class="nav-item"><a href="" class="nav-link active">Add Recipe</a></li>
+                    <li class="nav-item"><a href="" class="nav-link active">Profile</a></li>
+                    <li class="nav-item"><a href="" class="nav-link active">Manage Account</a></li>
                     <li class="nav-item">
                         <a href="{% url 'logout' %}" class="nav-link active">Logout</a>
                     </li>
-                    <li class="nav-item welcome"><span>Hi {{ user.username }}!</span></li>
+
                     {% else %}
                     <li class="nav-item dropdown">
                         <a href="{% url 'login' %}" class="nav-link" id="navbarDropdown" role="button"
