amend registration form

--- a/templates/accounts/manage_account.html
+++ b/templates/accounts/manage_account.html
@@ -4,17 +4,25 @@
 
 <h1>Manage Account</h1>
 
-<div>
+<!-- <div>
     <h5>Username</h5>
     <p>Username: {{ user.username }}</p>
     <button>Change Username</button>
+</div> -->
+<div>
+    <form action="">
+        <h5>Change Password</h5>
+        <input type="password" placeholder="Old Password">
+        <input type="password" name= "password1" placeholder="New Password">
+        <input type="password" name="password2" placeholder="Repeat New Password">
+        <button>Change Password</button>
+    </form>
+    
 </div>
 <div>
-    <h5>Password</h5>
-    <button>Change Password</button>
-</div>
-<div>
-    <button>Delete Account</button>
+    <h5>Delete Account</h5>
+    <button>Delete Foody Family Account</button>
+    <p>Account Deletion is Permanent!</p>
 </div>
 
 
