--- a/templates/accounts/manage_account.html
+++ b/templates/accounts/manage_account.html
@@ -10,11 +10,13 @@
     <button>Change Username</button>
 </div> -->
 <div>
-    <form action="">
-        <h5>Change Password</h5>
+    <form method="POST" action="" class="form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <!-- <h5>Change Password</h5>
         <input type="password" placeholder="Old Password">
         <input type="password" name= "password1" placeholder="New Password">
-        <input type="password" name="password2" placeholder="Repeat New Password">
+        <input type="password" name="password2" placeholder="Repeat New Password"> -->
         <button>Change Password</button>
     </form>
     
