--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -4,23 +4,25 @@
 
 <h1>Manage Account</h1>
 
-<!-- <div>
+<div>
     <h5>Username</h5>
     <p>Username: {{ user.username }}</p>
     <button>Change Username</button>
-</div> -->
+</div>
+
 <div>
     <form method="POST" action="" class="form">
         {% csrf_token %}
+        <h5>Change Password</h5>
         {{ form.as_p }}
-        <!-- <h5>Change Password</h5>
-        <input type="password" placeholder="Old Password">
-        <input type="password" name= "password1" placeholder="New Password">
-        <input type="password" name="password2" placeholder="Repeat New Password"> -->
-        <button>Change Password</button>
+        <button>
+            <a href="{% url 'change_password' %}">
+                Change Password
+            </a>
+        </button>
     </form>
-    
 </div>
+
 <div>
     <h5>Delete Account</h5>
     <button>Delete Foody Family Account</button>
