change profile page to manage_accounts and add new profile page

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -2,32 +2,16 @@
 
 {% block content %}
 
-<h1>Manage Account</h1>
+<h1>{{ user.username }}'s Profile</h1>
 
 <div>
-    <h5>Username</h5>
-    <p>Username: {{ user.username }}</p>
-    <button>Change Username</button>
+    <h5>Posted Recipes</h5>
 </div>
 
 <div>
-    <form method="POST" action="" class="form">
-        {% csrf_token %}
-        <h5>Change Password</h5>
-        {{ form.as_p }}
-        <button>
-            <a href="{% url 'change_password' %}">
-                Change Password
-            </a>
-        </button>
-    </form>
+    <h5>Draft Recipes</h5>
 </div>
 
-<div>
-    <h5>Delete Account</h5>
-    <button>Delete Foody Family Account</button>
-    <p>Account Deletion is Permanent!</p>
-</div>
 
 
 {% endblock %}
