start delete account view, url and template. Still to fix

--- a/templates/accounts/manage_account.html
+++ b/templates/accounts/manage_account.html
@@ -18,9 +18,13 @@
 </div>
 
 <div>
-    <h5>Delete Account</h5>
-    <button>Delete Foody Family Account</button>
-    <p>Account Deletion is Permanent!</p>
+    <form method="POST" action="">
+        <h5>Delete Account</h5>
+        <button>
+            <a href="{% url 'confirm_delete_account' %}">Delete Foody Family Account</a>
+        </button>
+        <p>Account Deletion is Permanent!</p>
+    </form>
 </div>
 
 
