--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                         <span>Hi {{ user.username }}!</span>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link active">Add Recipe</a>
+                        <a href="{% url 'add_recipe' %}" class="nav-link active">Add Recipe</a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'profile' %}" class="nav-link active">My Profile</a>
