add buttons to form

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -4,7 +4,7 @@
 
 <h1>Add Recipe</h1>
 
-<form action="">
+<form method="" action="">
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="floatingInput" placeholder="Recipe Title">
         <label for="floatingInput">Recipe Title</label>
@@ -37,6 +37,9 @@
         <textarea class="form-control" placeholder="Additional Notes" id="floatingTextarea2" style="height: 100px"></textarea>
         <label for="floatingTextarea2">Additional Notes</label>
       </div>
+      <button>Add Recipe</button>
+      <button>Create Draft</button>
+      <button>Cancel</button>
 </form>
 
 {% endblock %}
