--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-
 {% block content %}
+{% load crispy_forms_tags %}
 
 <h1>Add Recipe</h1>
 
-<form method="" action="">
+<!-- <form method="" action="">
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="floatingInput" placeholder="Recipe Title">
         <label for="floatingInput">Recipe Title</label>
@@ -40,6 +40,12 @@
       <button>Add Recipe</button>
       <button>Create Draft</button>
       <button>Cancel</button>
-</form>
+</form> -->
 
+<p>Posting as: {{ user.username }}</p>
+<form method="post" style="margin-top: 1.3em;">
+  {{ recipe_form | crispy }}
+  {% csrf_token %}
+  <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+</form>
 {% endblock %}
