--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -8,6 +8,7 @@
 <form method="post" style="margin-top: 1.3em;">
   {{ recipe_form | crispy }}
   {% csrf_token %}
-  <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+  <button type="submit" class="btn btn-signup btn-lg">Post Recipe</button>
+  <button type="submit" class="btn btn-signup btn-lg">Save to Drafts</button>
 </form>
 {% endblock %}
