--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         <a href="{% url 'add_recipe' %}" class="nav-link active">Add Recipe</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'profile' %}" class="nav-link active">My Profile</a>
+                        <a href="{% url 'my_recipes' %}" class="nav-link active">My Recipes</a>
                     </li>
                     <li class="nav-item">
                         <a href="{% url 'manage_account' %}" class="nav-link active">Manage Account</a>
