--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -24,13 +24,12 @@
                             <a href="#">
                                 <h5 class="card-title">{{ recipes.title }}</h5>
                             </a>
-                            <p class="card-text">By {{ recipes.author.id }}</p>
                             <div class="card-text">
                                 <span>
-                                    <i class="far fa-clock card-icons"></i>{{ recipes.total_length }}
+                                    <a href=""><i class="fas fa-pencil-alt"></i>Edit</a>
                                 </span>
                                 <span>
-                                    <i class="fas fa-heart card-icons"></i>{{ recipes.status }}
+                                    <a href=""><i class="far fa-trash-alt"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
@@ -68,13 +67,12 @@
                             <a href="#">
                                 <h5 class="card-title">{{ recipes.title }}</h5>
                             </a>
-                            <p class="card-text">By {{ recipes.author.id }}</p>
                             <div class="card-text">
                                 <span>
-                                    <i class="far fa-clock card-icons"></i>{{ recipes.total_length }}
+                                    <a href=""><i class="fas fa-pencil-alt"></i>Edit</a>
                                 </span>
                                 <span>
-                                    <i class="fas fa-heart card-icons"></i>{{ recipes.status }}
+                                    <a href=""><i class="far fa-trash-alt"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
