--- a/templates/base.html
+++ b/templates/base.html
@@ -37,14 +37,14 @@
                     {% if user.is_authenticated %}
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle welcome" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Hi {{ user.username }}!
+                            <span class="welcome">Hi {{ user.username }}!</span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'add_recipe' %}">Add Recipe</a></li>
-                            <li><a class="dropdown-item" href="{% url 'my_recipes' %}">My Posted Recipes</a></li>
-                            <li><a class="dropdown-item" href="{% url 'my_recipes' %}">My Draft Recipes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'my_posted_recipes' %}">My Posted Recipes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'my_draft_recipes' %}">My Draft Recipes</a></li>
                             <li><a class="dropdown-item" href="{% url 'manage_account' %}">Change Password</a></li>
                             <li>
                                 <hr class="dropdown-divider">
