--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
         </div>
     </nav>
 
-    <main class="flex-shrink-0">
+    <main class="flex-shrink-0 content">
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
