--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                             <li><a class="dropdown-item" href="{% url 'add_recipe' %}">Add Recipe</a></li>
                             <li><a class="dropdown-item" href="{% url 'my_posted_recipes' %}">My Posted Recipes</a></li>
                             <li><a class="dropdown-item" href="{% url 'my_draft_recipes' %}">My Draft Recipes</a></li>
-                            <li><a class="dropdown-item" href="{% url 'manage_account' %}">Change Password</a></li>
+                            <li><a class="dropdown-item" href="{% url 'change_password' %}">Change Password</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
