--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,14 @@
     </div>
 </heading>
 
+<div>
+    {% if messages %}
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    {% endif %}
+</div>
+
 <!-- Recipe card, code taken from Bootstrap -->
 <div class="container-fluid">
     <div class="row">
