--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -6,12 +6,7 @@
 
 <form method="post">{% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Update">
+  <input type="submit" value="Update Recipe">
 </form>
 
-<!-- <form method="post" style="margin-top: 1.3em;">
-  {{ recipe_form | crispy }}
-  {% csrf_token %}
-  <button type="submit" class="btn btn-signup btn-lg">Update Recipe</button>
-</form> -->
 {% endblock %}
