Add block title to all templates

--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Foody Family | Change Password{% endblock %}
 {% block content %}
 
 <h1>Change Password</h1>
