--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Foody Family{% endblock %}
 
 {% block content %}
 <!-- Landing Page image with welcome message -->
