--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Foody Family | My Posted Recipes{% endblock %}
 {% block content %}
 
 <h1>My Posted Recipes</h1>
