--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Foody Family | Login{% endblock %}
 {% block content %}
 
 <!--form template copied from Bootstrap forms with a couple of amendments-->
