--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Foody Family | Add Recipe{% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
 
@@ -8,6 +9,5 @@
   {{ recipe_form | crispy }}
   {% csrf_token %}
   <button type="submit" class="btn btn-signup btn-lg">Post Recipe</button>
-  <button type="submit" class="btn btn-signup btn-lg">Save to Drafts</button>
 </form>
 {% endblock %}
