--- a/templates/delete_recipe.html
+++ b/templates/delete_recipe.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Delete Recipe{% endblock %}
+{% block title %}Foody Family | Delete Recipe{% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
 
