--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Foody Family | My Draft Recipes{% endblock %}
 {% block content %}
 
 <h1>My Draft Recipes</h1>
