--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Foody Family | {{ recipe.title }}{% endblock %}
 {% block content %}
 
 <div class="card mb-3">
