--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Foody Family | Edit Recipe{% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
 
