--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'add_recipe' %}">Add Recipe</a></li>
                             <li><a class="dropdown-item" href="{% url 'my_posted_recipes' %}">My Posted Recipes</a></li>
-                            <li><a class="dropdown-item" href="{% url 'my_draft_recipes' %}">My Draft Recipes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'my_pending_recipes' %}">My Draft Recipes</a></li>
                             <li><a class="dropdown-item" href="{% url 'change_password' %}">Change Password</a></li>
                             <li>
                                 <hr class="dropdown-divider">
