--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:5 %}
+                {% if forloop.counter|divisibleby:4 %}
             </div>
             <div class="row">
                 {% endif %}
@@ -43,6 +43,23 @@
                 {% endfor %}
             </div>
         </div>
+    </div>
+
+    <!-- Site Pagination, maximum 12 recipes per page -->
+    <div>
+        {% if is_paginated %}
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                {% if page_obj.has_previous %}
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+                {% endif %}
+                {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+                {% endif %}
+            </ul>
+        </nav>
+        {% endif %}
     </div>
 </div>
 
