--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!--Favicon created in Canva-->
+    <link rel="shortcut icon" type="image/jpg"
+        href="https://res.cloudinary.com/sjb21/image/upload/v1643393370/android-chrome-512x512_iuewss.png" />
     <title>{% block title %}Foody Family{% endblock %}</title>
 </head>
 
