--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -25,10 +25,10 @@
                             </a>
                             <div class="card-text">
                                 <span>
-                                    <a href="{% url 'update_recipe' recipes.pk %}"><i class="fas fa-pencil-alt"></i>Edit</a>
+                                    <a href="{% url 'update_draft' recipes.pk %}"><i class="fas fa-pencil-alt"></i>Edit</a>
                                 </span>
                                 <span>
-                                    <a href="{% url 'delete_recipe' recipes.pk %}"><i class="far fa-trash-alt"></i>Delete</a>
+                                    <a href="{% url 'delete_draft' recipes.pk %}"><i class="far fa-trash-alt"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
