--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,8 @@
             <a href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest"></i></a>
         </div>
     </footer>
+
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
