--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -14,22 +14,9 @@
   
   {{ recipe_form | crispy }}
   {% csrf_token %}
-  <!-- <button type="submit" class="btn btn-signup btn-lg">Post Recipe</button> -->
+  <button type="submit" class="btn btn-signup btn-lg">Post Recipe</button>
 
-  <button type="submit" class="btn btn-primary" id="liveToastBtn">Post Recipe</button>
-
-  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header">
-        <!-- <img src="..." class="rounded me-2" alt="..."> -->
-        <strong class="me-auto">Recipe Submitted!</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-      <div class="toast-body">
-        Waiting for approval.
-      </div>
-    </div>
-  </div>
+  <!-- <button type="submit" class="btn btn-primary" id="liveToastBtn">Post Recipe</button> -->
 
 </form>
 {% endblock %}
