--- a/templates/base.html
+++ b/templates/base.html
@@ -47,14 +47,14 @@
                             <span class="welcome">Hi {{ user.username }}!</span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'add_recipe' %}">Add Recipe</a></li>
-                            <li><a class="dropdown-item" href="{% url 'my_posted_recipes' %}">My Posted Recipes</a></li>
-                            <li><a class="dropdown-item" href="{% url 'my_pending_recipes' %}">My Draft Recipes</a></li>
-                            <li><a class="dropdown-item" href="{% url 'change_password' %}">Change Password</a></li>
+                            <li><a class="dropdown-item" href="{% url 'add_recipe' %}"><i class="fas fa-plus"></i>Add Recipe</a></li>
+                            <li><a class="dropdown-item" href="{% url 'my_posted_recipes' %}"><i class="fas fa-carrot"></i>My Posted Recipes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'my_pending_recipes' %}"><i class="fas fa-ellipsis-h"></i>Recipes Pending Approval</a></li>
+                            <li><a class="dropdown-item" href="{% url 'change_password' %}"><i class="fas fa-unlock-alt"></i>Change Password</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                            <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
                         </ul>
                     </li>
                     {% else %}
