--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -6,7 +6,9 @@
 <h1>Edit {{ recipe.title }} Recipe</h1>
 
 <form method="post">{% csrf_token %}
-  {{ form.as_p }}
+
+  {{ form | crispy }}
+ 
   <input type="submit" value="Update Recipe">
 </form>
 
