--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -4,6 +4,21 @@
 
 <h1>My Recipes Pending Approval</h1>
 
+<!-- Below from Code Institutes CodeStar project -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+<!--Recipe cards for users own recipes pending approval -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 mt-4 left">
@@ -25,10 +40,12 @@
                             </a>
                             <div class="card-text">
                                 <span>
-                                    <a href="{% url 'update_draft' recipes.pk %}"><i class="fas fa-pencil-alt"></i>Edit</a>
+                                    <a href="{% url 'update_draft' recipes.pk %}"><i
+                                            class="fas fa-pencil-alt"></i>Edit</a>
                                 </span>
                                 <span>
-                                    <a href="{% url 'delete_draft' recipes.pk %}"><i class="far fa-trash-alt"></i>Delete</a>
+                                    <a href="{% url 'delete_draft' recipes.pk %}"><i
+                                            class="far fa-trash-alt"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
