--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
     <div class="container-fluid home-img">
         <div class="row">
             <div class="col title">
-                <h1>Welcome to the Foody Family</h1>
+                <h1 class="welcome-title">Welcome to the Foody Family</h1>
                 <hr>
-                <p>We hope you find the perfect recipe here!</p>
+                <p class="welcome-msg">We hope you find the perfect recipe here!</p>
             </div>
         </div>
     </div>
