--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,31 @@
-/*Sticky Footer from https://css-tricks.com/couple-takes-sticky-footer/ */
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Ribeye+Marrow&display=swap');
+
+/* Sticky Footer from https://css-tricks.com/couple-takes-sticky-footer/ */
 html, body {
     height: 100%;
   }
   body {
     display: flex;
     flex-direction: column;
+    font-family: 'Baloo Thambi 2', cursive;
   }
   .content {
     flex: 1 0 auto;
   }
   .footer {
     flex-shrink: 0;
+  }
+
+  .header {
+    font-family: 'Ribeye Marrow', cursive;
+    font-size: xx-large;
+    color: #A7490D;
+  }
+
+  /* Nav stylling*/
+  .nav-style {
+      font-size: large;
   }
 
 /* homepage landing stylling */
@@ -34,7 +49,16 @@ html, body {
     border-radius: 10px;
 }
 
-.welcome {
+.welcome-title{
+    font-family: 'Ribeye Marrow', cursive;
+}
+
+.welcome-usr {
+    color: #A7490D;
+}
+
+.nav-icon {
+    margin-right: 15px;
     color: #A7490D;
 }
 
