add stylling to recipe view page

--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -2,40 +2,55 @@
 {% block title %}Foody Family | {{ recipe.title }}{% endblock %}
 {% block content %}
 
-<div class="card mb-3">
+
+<div class="card mb-3 recipe-display left-div">
     {% if "placeholder" in recipe.featured_image.url %}
     <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
         alt="placeholder image" class="card-img-top details-img">
     {% else %}
     <img src="{{ recipe.featured_image.url }}" alt="recipe image" class="card-img-top details-img">
     {% endif %}
+</div>
+<div class="recipe-display right-div">
     <div class="card-body">
-        <h5 class="card-title">{{ recipe.title }}</h5>
-        <p class="card-text">By {{ recipe.author }}</p>
-        <span lass="card-text"><small>
-                <i class="far fa-clock"></i>Prep Time: {{ recipe.preparation_length }}
-                <i class="far fa-clock"></i>Cook Time: {{ recipe.cooking_length }}
-                <i class="far fa-clock"></i>Total: {{ recipe.total_length }}
-            </small>
+        <h1 class="card-title">{{ recipe.title }}</h1>
+        <h3 class="card-text">By {{ recipe.author }}</h3>
+        <span lass="card-text">
+            <div>
+                <small>
+                    <i class="far fa-clock"></i>Prep Time: {{ recipe.preparation_length }}
+                </small>
+            </div>
+            <div>
+                <small>
+                    <i class="far fa-clock"></i>Cook Time: {{ recipe.cooking_length }}
+                </small>
+            </div>
+            <div>
+                <small>
+                    <i class="far fa-clock"></i>Total: {{ recipe.total_length }}
+                </small>
+            </div>
         </span>
     </div>
 </div>
 
-<div>
-    <div>
+<div class="rec-detail">
+    <div class="recipe-display left-div ingredients">
         <h2>Ingredients</h2>
         <span>{{ recipe.ingredients|safe }}</span>
     </div>
-    <hr>
-    <div>
+    
+    <div class="method">
         <h2>Method</h2>
         <span>{{ recipe.instructions|safe }}</span>
     </div>
+</div>
+
+<div class="rec-detail">
     <hr>
-    <div>
-        <h2>Notes</h2>
-        <span>{{ recipe.excerpt|safe }}</span>
-    </div>
+    <h2>Notes</h2>
+    <span>{{ recipe.excerpt|safe }}</span>
 </div>
 
 {%endblock%}
