--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,36 +2,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Ribeye+Marrow&display=swap');
 
 /* Sticky Footer from https://css-tricks.com/couple-takes-sticky-footer/ */
-html, body {
+html,
+body {
     height: 100%;
-  }
-  body {
+}
+
+body {
     display: flex;
     flex-direction: column;
     font-family: 'Baloo Thambi 2', cursive;
-  }
-  .content {
-    flex: 1 0 auto;
-  }
-  .footer {
-    flex-shrink: 0;
-  }
+}
 
-  .header {
+.content {
+    flex: 1 0 auto;
+}
+
+.footer {
+    flex-shrink: 0;
+}
+
+.header {
     font-family: 'Ribeye Marrow', cursive;
     font-size: xx-large;
     color: #A7490D;
-  }
+}
 
-  /* Nav stylling*/
-  .nav-style {
-      font-size: large;
-  }
+/* Nav stylling*/
+.nav-style {
+    font-size: large;
+}
+
+.nav-icon {
+    margin-right: 15px;
+    color: #A7490D;
+}
+
+.welcome-usr {
+    color: #A7490D;
+}
 
 /* homepage landing stylling */
 .home-img {
     background: url('https://res.cloudinary.com/sjb21/image/upload/v1642009399/static/landing-image_jaq8ob.jpg') no-repeat center center fixed;
-    min-height: 700px; 
+    min-height: 700px;
     padding: 0;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -49,23 +62,20 @@ html, body {
     border-radius: 10px;
 }
 
-.welcome-title{
+.welcome-title {
     font-family: 'Ribeye Marrow', cursive;
 }
 
-.welcome-usr {
-    color: #A7490D;
-}
-
-.nav-icon {
-    margin-right: 15px;
-    color: #A7490D;
+/* Headings stylling for all pages */
+h1 {
+    text-align: center;
 }
 
 /* Recipe Card Stylling */
 .card-position {
     margin-bottom: 10px;
 }
+
 .card-icons {
     color: #0b1726;
     padding-right: 5px;
@@ -75,6 +85,42 @@ html, body {
     /* w3schools used to find object-fit property*/
     max-height: 191px;
     object-fit: cover;
+}
+
+/* recipe detail stylling */
+
+.details-img {
+    max-height: 300px;
+    object-fit: cover;
+}
+
+.recipe-display {
+    float: left;
+}
+
+.rec-detail {
+    clear: both;
+}
+
+.left-div {
+    width: 25%;
+}
+
+.right-div {
+    height: 300px;
+    width: 75%;
+    background-color: #ECECE2;
+}
+
+.method {
+    width: 75%;
+    float: right;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.ingredients {
+    width: 25%;
 }
 
 
@@ -102,11 +148,4 @@ html, body {
     padding: 20px;
     margin: 0;
     font-size: 30px;
-}
-
-/* recipe detail stylling */
-
-.details-img {
-    max-height: 300px;
-    object-fit: cover;
 }
