--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
 <!-- Recipe card, code taken from Bootstrap -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 mt-4 left">
+        <div class="col-12 mt-4 ">
             <div class="row">
-                <h2>Recipes</h2>
+                <h1>Recipes</h1>
                 {% for recipes in recipe_list %}
-                <div class="col-md-3">
+                <div class="col-md-3 mt-3">
                     <div class="card card-position" style="width: 18rem;">
                         {% if "placeholder" in recipes.featured_image.url %}
                         <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
